# gspabm

./: CMakeLists.txt
include/: peris.h  render.h  solver.h  world.h
src/: main.cu  peris.cu  world.cu
